fix: Document doesn't use legible font sizes

--- a/src/Component/Contact/CardContact.css
+++ b/src/Component/Contact/CardContact.css
@@ -104,7 +104,17 @@
   .CardContact {
     width: 350px;
     height: 350px;
-    font-size: 0.7em;
+    font-size: 12px;
+    grid-template-rows: 20% 60% 20%;
+  }
+  .CardContact__header img {
+    height: 50px;
+    width: 50px;
+  }
+
+  .CardContact__description p {
+    padding-top: 10px;
+    font-size: 12px;
   }
 }
 
@@ -112,10 +122,13 @@
   .CardContact {
     width: 300px;
     height: 300px;
-    font-size: 0.5em;
+    grid-template-areas: "Contact" "Contact" "Description";
+  }
+
+  .CardContact__contacts{
+    padding: 0 15px 15px;
   }
   .CardContact__header img {
-    height: 60px;
-    width: 60px;
+   display: none;
   }
 }
