--- a/src/Component/NavBar/Button.css
+++ b/src/Component/NavBar/Button.css
@@ -40,7 +40,7 @@
 
 @media (max-width: 768px) {
   .Button {
-    font-size: 0.8em;
+    font-size: 13px;
     margin: 2em;
   }
   .Button__image {
